# icub-hri

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  brew-helper-travis  index.html
app/: CMakeLists.txt
app/SAM/samSupervisor/: CMakeLists.txt
app/agentDetector/: CMakeLists.txt
app/attentionRelated/ears/: CMakeLists.txt
app/attentionRelated/pasar/: CMakeLists.txt
app/attentionRelated/proactiveTagging/: CMakeLists.txt
app/babbling/: CMakeLists.txt
app/babbling/conf/: babbling.ini
app/demos/: CMakeLists.txt  proactiveTagging.xml
app/ears/: CMakeLists.txt
app/ears/conf/: MainGrammar.xml
app/faceTracker/: CMakeLists.txt
app/icubClient/: CMakeLists.txt
app/iol2opc/: CMakeLists.txt
app/iol2opc/conf/: config.ini
app/iol2opc/scripts/: iol2opc_blobExtractor.xml.template  iol2opc_lbpExtract.xml.template
app/pasar/: CMakeLists.txt
app/planner/: CMakeLists.txt
app/planner/conf/: client.ini
app/proactiveTagging/: CMakeLists.txt
app/proactiveTagging/conf/: client.ini
app/proactiveTagging/scripts/: proactiveTagging.xml.template
app/reactiveLayer/allostaticController/: CMakeLists.txt
app/reactiveLayer/allostaticController/conf/: default.ini  test.ini
app/reactiveLayer/behaviorManager/: CMakeLists.txt
app/reactiveLayer/behaviorManager/conf/: client.ini  default.ini
app/reactiveLayer/homeostasis/: CMakeLists.txt
app/reactiveLayer/sensationManager/: CMakeLists.txt
app/samRelated/SAM/samSupervisor/: CMakeLists.txt
app/tools/: CMakeLists.txt
app/tools/actionRecogDataDumper/: CMakeLists.txt
app/tools/actionRecogDataDumper/scripts/: actionRecogDataDumper.xml
app/tools/opcPopulater/: CMakeLists.txt
app/tools/opcPopulater/conf/: opcPopulater.ini
app/tools/opcPopulator/: CMakeLists.txt
app/tools/referenceFrameHandler/: CMakeLists.txt
app/tools/referenceFrameHandler/conf/: config.ini
app/tools/touchDetector/: CMakeLists.txt
app/touchDetector/: CMakeLists.txt
bindings/: CMakeLists.txt  example_ARE.py  example_KARMA.py  icubclient.i
bindings/src/: Loadicubclient.java  Loadicubhri.java
src/: CMakeLists.txt
src/doc/: bindings.dox  facerecognitiontutorial.dox  groups.dox  main.dox  proactivetagging.dox  subsystems.dox  tutorials.dox
src/examples/: CMakeLists.txt
src/examples/ARE_KARMAiCubClientExample/: ARE_KARMAiCubClientExample.xml  CMakeLists.txt  main.cpp
src/examples/AREiCubClientExample/: AREiCubClientExample.xml  CMakeLists.txt  main.cpp
src/examples/KARMA_OPC_Example/: CMakeLists.txt  KARMA_OPC_Example.xml  main.cpp
src/examples/KARMA_Simple/: CMakeLists.txt  main.cpp
src/examples/KARMAiCubClientExample/: CMakeLists.txt  KARMAiCubClientExample.xml  main.cpp
src/examples/icub-client-dependent-project/: CMakeLists.txt
src/examples/icub-client-dependent-project/src/: CMakeLists.txt  main.cpp
src/examples/icub-hri-dependent-project/: CMakeLists.txt
src/examples/icub-hri-dependent-project/src/: CMakeLists.txt  main.cpp
src/examples/wrdacExample/: main.cpp  wrdacExample.xml
src/idl_generated_code/include/: iol2opc_IDL.h
src/idl_generated_code/src/: iol2opc_IDL.cpp
src/libraries/: CMakeLists.txt
src/libraries/icubClientIDLClients/: CMakeLists.txt  icubClientIDLClients.h
src/libraries/icubclient/: CMakeLists.txt
src/libraries/icubclient/src/: functions.cpp
src/libraries/icubclientIDLClients/: CMakeLists.txt
src/libraries/icubhriIDLClients/: CMakeLists.txt  icubhriIDLClients.h
src/libraries/icubhriLibrary/: CMakeLists.txt
src/libraries/icubhriLibrary/src/: functions.cpp
src/libraries/wrdac/: CMakeLists.txt
src/libraries/wrdac/src/: functions.cpp
src/libraries/wysiwydIDLClients/: CMakeLists.txt  wysiwydIDLClients.h
src/modules/: CMakeLists.txt
src/modules/SAM/: README.md  __init__.py
src/modules/SAM/SAM_Core/: SAMCore.py  SAMDriver.py  SAMTesting.py  SAM_utils.py  __init__.py  interactionSAMModel.py  samOptimiser.py  samSupervisor.py  svi_ratio.py  trainSAMModel.py
src/modules/SAM/SAM_Drivers/: SAMDriver_ARWin.py  SAMDriver_interaction.py  SAMDriver_temporalActions.py  __init__.py
src/modules/agentDetector/: AgentDetector.cpp  AgentDetector.h  CMakeLists.txt  agentDetector.xml  main.cpp
src/modules/attentionRelated/ears/: CMakeLists.txt  ears.xml
src/modules/attentionRelated/pasar/: CMakeLists.txt  pasar.xml
src/modules/attentionRelated/proactiveTagging/: CMakeLists.txt  proactiveTagging.xml
src/modules/babbling/: CMakeLists.txt  babbling.xml
src/modules/babbling/include/: babbling.h
src/modules/babbling/src/: babbling.cpp  main.cpp
src/modules/ears/: CMakeLists.txt  ears.xml
src/modules/ears/include/: ears.h
src/modules/ears/src/: ears.cpp  main.cpp
src/modules/faceTracker/: CMakeLists.txt  faceTracker.xml
src/modules/faceTracker/include/: faceTracker.h
src/modules/faceTracker/src/: faceTracker.cpp  main.cpp
src/modules/iol2opc/: CMakeLists.txt  iol2opc.xml
src/modules/iol2opc/include/: module.h  utils.h
src/modules/iol2opc/src/: main.cpp  module.cpp  utils.cpp
src/modules/pasar/: CMakeLists.txt  pasar.xml
src/modules/pasar/include/: pasar.h
src/modules/pasar/src/: main.cpp  pasar.cpp
src/modules/planner/: CMakeLists.txt  planner.xml
src/modules/planner/include/: planner.h
src/modules/planner/src/: main.cpp  planner.cpp
src/modules/proactiveTagging/: CMakeLists.txt  proactiveTagging.xml
src/modules/proactiveTagging/include/: proactiveTagging.h
src/modules/proactiveTagging/src/: helpers.cpp  main.cpp  proactiveTagging.cpp
src/modules/reactiveLayer/: allostatic_plot.py  drive_control_gui.py  drive_control_rpc.py
src/modules/reactiveLayer/allostaticController/: CMakeLists.txt  allostaticController.xml
src/modules/reactiveLayer/behaviorManager/: CMakeLists.txt  behaviorManager.xml
src/modules/reactiveLayer/homeostasis/: CMakeLists.txt  homeostasis.xml
src/modules/samRelated/SAM/: README.md  __init__.py
src/modules/tools/: CMakeLists.txt
src/tests/test-are-attention/: CMakeLists.txt  main.cpp
src/tests/test-cartesian-sim/: CMakeLists.txt  main.cpp
src/tests/test-verbRec/: CMakeLists.txt  main.cpp
(+2419 files in other folders)
