# Copyright: (C) 2014 WYSIWYD Consortium
# Authors: Ugo Pattacini
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(agentDetector)
add_subdirectory(babbling)
add_subdirectory(demos)
add_subdirectory(ears)
add_subdirectory(faceTracker)
add_subdirectory(icubClient)
add_subdirectory(iol2opc)
add_subdirectory(pasar)
add_subdirectory(planner)
add_subdirectory(proactiveTagging)
add_subdirectory(reactiveLayer)
add_subdirectory(SAM)
add_subdirectory(tools)

