# Copyright: (C) 2014 WYSIWYD Consortium
# Authors: Ugo Pattacini
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(AREiCubClientExample)
add_subdirectory(KARMAiCubClientExample)
add_subdirectory(KARMA_OPC_Example)
add_subdirectory(ARE_KARMAiCubClientExample)
add_subdirectory(KARMA_Simple)

